[gd_scene load_steps=5 format=3 uid="uid://ob8yma15pdi3"]

[ext_resource type="Script" uid="uid://bkq8s1gvvxwkj" path="res://Scenes/RewardInventory.gd" id="1_26cvr"]
[ext_resource type="Texture2D" uid="uid://jva0xqc6dyou" path="res://sprites/BUTTONS/buttoEXIT1.png" id="2_kmp0b"]
[ext_resource type="Texture2D" uid="uid://brjogx3he6r6c" path="res://sprites/BG/tewatd.png" id="2_mna8h"]
[ext_resource type="Texture2D" uid="uid://q1oolwur2sgd" path="res://sprites/BUTTONS/buttoEXIT11.png" id="3_mna8h"]

[node name="RewardInventory" type="Node2D"]
script = ExtResource("1_26cvr")

[node name="BG" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_mna8h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 637.0
offset_bottom = 357.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="RewardGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="MainMenuButton" type="TextureButton" parent="."]
texture_normal = ExtResource("2_kmp0b")
texture_pressed = ExtResource("3_mna8h")

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_pressed"]
